--- a/package.json
+++ b/package.json
@@ -1,26 +1,45 @@
 {
-  "name": "my-app-typescript",
-  "version": "0.1.0",
+  "name": "incorta-components",
+  "description": "Incorta Components — Storybook",
+  "version": "0.0.1",
   "private": true,
+  "author": "Torii Studio",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.1",
-    "@types/node": "^16.11.26",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.4",
+    "@mui/material": "^5.4.4",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "axios": "^0.26.0",
+    "clsx": "^1.1.1",
+    "echarts": "^5.3.0",
+    "echarts-for-react": "^3.0.2",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-jss": "^10.9.0",
     "react-scripts": "5.0.0",
-    "typescript": "^4.6.2",
-    "web-vitals": "^2.1.4"
+    "react-sparklines": "^1.7.0",
+    "typescript": "^4.6.2"
+  },
+  "devDependencies": {
+    "@storybook/addon-a11y": "^6.2.9",
+    "@storybook/addon-actions": "^6.1.11",
+    "@storybook/addon-docs": "^6.2.9",
+    "@storybook/addon-info": "^5.3.21",
+    "@storybook/addon-knobs": "^6.1.11",
+    "@storybook/addon-links": "^6.1.11",
+    "@storybook/addon-notes": "^5.3.21",
+    "@storybook/addon-storysource": "^6.1.11",
+    "@storybook/addon-viewport": "^6.1.11",
+    "@storybook/react": "^6.1.11",
+    "@storybook/storybook-deployer": "^2.8.7",
+    "@storybook/theming": "^6.1.11"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "yarn storybook",
+    "storybook": "start-storybook -p 10000 --no-manager-cache"
   },
   "eslintConfig": {
     "extends": [
