--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "typescript": "^4.6.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
     "@storybook/addon-a11y": "^6.2.9",
     "@storybook/addon-actions": "^6.1.11",
     "@storybook/addon-docs": "^6.2.9",
@@ -35,7 +38,10 @@
     "@storybook/addon-viewport": "^6.1.11",
     "@storybook/react": "^6.1.11",
     "@storybook/storybook-deployer": "^2.8.7",
-    "@storybook/theming": "^6.1.11"
+    "@storybook/theming": "^6.1.11",
+    "@types/lodash": "^4.14.179",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "babel-plugin-transform-class-properties": "^6.24.1"
   },
   "scripts": {
     "start": "yarn storybook",
